environments/bose-dev/apps/app-inventory/services/inventory/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: inventory
  namespace: bose-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory
      app.kubernetes.io/part-of: app-inventory
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: inventory
        app.kubernetes.io/part-of: app-inventory
    spec:
      containers:
      - image: quay.io/shbose/inventory:sbose78-patch-4-e0021938ce01bf7b079dd2454b5d0c96b1112086
        imagePullPolicy: Always
        name: inventory
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
