environments/bose-dev/apps/app-inventory/services/inventory/base/config/300-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: inventory
  namespace: bose-dev
spec:
  to:
    kind: Service
    name: inventory
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
